# adic

adic/: AUTHORS  Makefile.am  README  TODO  bootstrap.sh  configure.ac  configure.in  version
adic/config/: autogen.sh
adic/config/m4/: Makefile.am  mdl_have_opengl.m4
adic/data/: Makefile.am  adic-3.s3m  adic-4.s3m  adic.xml  barrel.xml  bigworld.xml  boy.xml  cowboy.xml  default.xml  fountain.xml  girl.xml  mesh.xml  miniworld.xml  muetze.xml  music-eric.s3m  music-eric2.s3m  music.mod  music1.xm  world.xml
adic/debian/: adic.menu  changelog  control  copyright  docs  rules
adic/doc/: Doxyfile.in  Makefile.am  index.html
adic/doc/concept/: concept.lyx  fig.xfig
adic/limbo/: RELEASE-PROCESS  release.sh
adic/scripts/: dope-config.in
adic/src/: Makefile  Makefile.am  animation.cpp  animation.h  blackbot.cpp  blackbot.h  bot.cpp  bot.h  botclient.cpp  botclient.h  camera.cpp  camera.h  circle.h  client.cpp  client.h  clientconfig.h  commonconfig.h  door.cpp  door.h  game.cpp  game.h  gameobject.h  genericpointer.h  glfont.cpp  glfont.h  glfunctions.h  glpoly.cpp  glpoly.h  glterminal.cpp  glterminal.h  gui.cpp  gui.h  guiconfig.h  icon.h  input.h  karmebot.cpp  karmebot.h  line.cpp  line.h  mesh.h  (+58 more)
