dnl process this file with autoconf to produce a configure script

AC_INIT
AC_CONFIG_SRCDIR([src/mesh.h])

PACKAGE=adic
VERSION=0.0.2

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config/config.h)
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

dnl build options

dnl checks for libraries
dnl dope only works if those libraries are installed
dnl AM_PATH_XML2(2.4.0, , [AC_MSG_ERROR([libxml required])])
dnl AM_PATH_SIGC(1.0.0, , [AC_MSG_ERROR([libsigc++ required])])
AM_PATH_DOPE(0.0.1, , [AC_MSG_ERROR([dope++ required])])
AC_CACHE_SAVE
dnl checks for c++ header files
AC_LANG([C++])
dnl AC_CHECK_HEADER(boost/smart_ptr.hpp, AC_DEFINE(USE_BOOST) , [AC_MSG_ERROR([boost::shared_ptr required - either install boost or write a replacement])])

dnl output files
AC_CONFIG_FILES([Makefile doc/Makefile doc/Doxyfile config/Makefile config/m4/Makefile src/Makefile data/Makefile])
AC_OUTPUT


