dnl process this file with autoconf to produce a configure script

AC_INIT
AC_CONFIG_SRCDIR([src/mesh.h])

PACKAGE=adic

dnl
dnl Source packaging numbers
PACKAGE_MAJOR_VERSION=0
PACKAGE_MINOR_VERSION=0
PACKAGE_MICRO_VERSION=6
PACKAGE_VERSION=$PACKAGE_MAJOR_VERSION.$PACKAGE_MINOR_VERSION.$PACKAGE_MICRO_VERSION
AC_DEFINE_UNQUOTED(PACKAGE_MAJOR_VERSION, $PACKAGE_MAJOR_VERSION, [major version])
AC_DEFINE_UNQUOTED(PACKAGE_MINOR_VERSION, $PACKAGE_MINOR_VERSION, [minor version])
AC_DEFINE_UNQUOTED(PACKAGE_MICRO_VERSION, $PACKAGE_MICRO_VERSION, [micro version])

dnl for automake
VERSION=$PACKAGE_VERSION

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config/config.h)
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

dnl build options

dnl checks for libraries
dnl dope only works if those libraries are installed
dnl AM_PATH_XML2(2.4.0, , [AC_MSG_ERROR([libxml required])])
dnl AM_PATH_SIGC(1.0.0, , [AC_MSG_ERROR([libsigc++ required])])
AM_PATH_DOPE(0.0.3, , [AC_MSG_ERROR([dope++ required])])
MDL_HAVE_OPENGL
AM_PATH_SDL(1.2.0)
AC_CACHE_SAVE
dnl checks for c++ header files
AC_LANG([C++])
dnl AC_CHECK_HEADER(boost/smart_ptr.hpp, AC_DEFINE(USE_BOOST) , [AC_MSG_ERROR([boost::shared_ptr required - either install boost or write a replacement])])

dnl output files
AC_CONFIG_FILES([Makefile doc/Makefile doc/Doxyfile config/Makefile config/m4/Makefile src/Makefile data/Makefile])
AC_OUTPUT


