gamefilesdir = $(pkgdatadir)
gamefiles_DATA = \
	mesh.xml barrel.xml \
	music.mod collision.wav \
	font.png textures.png barrel.png \
	girl_blue_0001.png \
	girl_blue_0002.png \
	girl_blue_0003.png \
	girl_blue_0004.png \
	girl_blue_0005.png \
	girl_blue_0006.png \
	girl_green_0001.png \
	girl_green_0002.png \
	girl_green_0003.png \
	girl_green_0004.png \
	girl_green_0005.png \
	girl_green_0006.png \
	girl_red_0001.png \
	girl_red_0002.png \
	girl_red_0003.png \
	girl_red_0004.png \
	girl_red_0005.png \
	girl_red_0006.png \
	girl_yellow_0001.png \
	girl_yellow_0002.png \
	girl_yellow_0003.png \
	girl_yellow_0004.png \
	girl_yellow_0005.png \
	girl_yellow_0006.png \
	boy_blue_0001.png \
	boy_blue_0002.png \
	boy_blue_0003.png \
	boy_blue_0004.png \
	boy_blue_0005.png \
	boy_blue_0006.png \
	boy_green_0001.png \
	boy_green_0002.png \
	boy_green_0003.png \
	boy_green_0004.png \
	boy_green_0005.png \
	boy_green_0006.png \
	boy_red_0001.png \
	boy_red_0002.png \
	boy_red_0003.png \
	boy_red_0004.png \
	boy_red_0005.png \
	boy_red_0006.png \
	boy_yellow_0001.png \
	boy_yellow_0002.png \
	boy_yellow_0003.png \
	boy_yellow_0004.png \
	boy_yellow_0005.png \
	boy_yellow_0006.png \
	cowboy_0001.png \
	cowboy_0002.png \
	cowboy_0003.png \
	cowboy_0004.png \
	cowboy_0005.png \
	cowboy_0006.png \
	cowboy_blue_0001.png \
	cowboy_blue_0002.png \
	cowboy_blue_0003.png \
	cowboy_blue_0004.png \
	cowboy_blue_0005.png \
	cowboy_blue_0006.png \
	cowboy_green_0001.png \
	cowboy_green_0002.png \
	cowboy_green_0003.png \
	cowboy_green_0004.png \
	cowboy_green_0005.png \
	cowboy_green_0006.png \
	cowboy_red_0001.png \
	cowboy_red_0002.png \
	cowboy_red_0003.png \
	cowboy_red_0004.png \
	cowboy_red_0005.png \
	cowboy_red_0006.png \
	cowboy_yellow_0001.png \
	cowboy_yellow_0002.png \
	cowboy_yellow_0003.png \
	cowboy_yellow_0004.png \
	cowboy_yellow_0005.png \
	cowboy_yellow_0006.png \
	muetze_blue_0001.png \
	muetze_blue_0002.png \
	muetze_blue_0003.png \
	muetze_blue_0004.png \
	muetze_blue_0005.png \
	muetze_blue_0006.png \
	muetze_green_0001.png \
	muetze_green_0002.png \
	muetze_green_0003.png \
	muetze_green_0004.png \
	muetze_green_0005.png \
	muetze_green_0006.png \
	muetze_red_0001.png \
	muetze_red_0002.png \
	muetze_red_0003.png \
	muetze_red_0004.png \
	muetze_red_0005.png \
	muetze_red_0006.png \
	muetze_yellow_0001.png \
	muetze_yellow_0002.png \
	muetze_yellow_0003.png \
	muetze_yellow_0004.png \
	muetze_yellow_0005.png \
	muetze_yellow_0006.png

EXTRA_DIST = $(gamefiles_DATA)
