gamefilesdir = $(pkgdatadir)
gamefiles_DATA = \
	mesh.xml miniworld.xml bigworld.xml adic.xml \
	barrel.xml fountain.xml \
	boy.xml girl.xml muetze.xml cowboy.xml \
	music.mod collision.wav \
	printer.wav newline.wav \
	font.png \
	gui_0001.png \
	gui_0002.png \
	gui_0003.png \
	gui_0004.png \
	gui_0005.png \
	gui_0006.png \
	gui_0007.png \
	hi.png \
	barrel.png \
	pillar.png \
	girl_blue_0001.png \
	girl_blue_0002.png \
	girl_blue_0003.png \
	girl_blue_0004.png \
	girl_blue_0005.png \
	girl_blue_0006.png \
	girl_green_0001.png \
	girl_green_0002.png \
	girl_green_0003.png \
	girl_green_0004.png \
	girl_green_0005.png \
	girl_green_0006.png \
	girl_red_0001.png \
	girl_red_0002.png \
	girl_red_0003.png \
	girl_red_0004.png \
	girl_red_0005.png \
	girl_red_0006.png \
	girl_yellow_0001.png \
	girl_yellow_0002.png \
	girl_yellow_0003.png \
	girl_yellow_0004.png \
	girl_yellow_0005.png \
	girl_yellow_0006.png \
	boy_blue_0001.png \
	boy_blue_0002.png \
	boy_blue_0003.png \
	boy_blue_0004.png \
	boy_blue_0005.png \
	boy_blue_0006.png \
	boy_green_0001.png \
	boy_green_0002.png \
	boy_green_0003.png \
	boy_green_0004.png \
	boy_green_0005.png \
	boy_green_0006.png \
	boy_red_0001.png \
	boy_red_0002.png \
	boy_red_0003.png \
	boy_red_0004.png \
	boy_red_0005.png \
	boy_red_0006.png \
	boy_yellow_0001.png \
	boy_yellow_0002.png \
	boy_yellow_0003.png \
	boy_yellow_0004.png \
	boy_yellow_0005.png \
	boy_yellow_0006.png \
	cowboy_0001.png \
	cowboy_0002.png \
	cowboy_0003.png \
	cowboy_0004.png \
	cowboy_0005.png \
	cowboy_0006.png \
	cowboy_blue_0001.png \
	cowboy_blue_0002.png \
	cowboy_blue_0003.png \
	cowboy_blue_0004.png \
	cowboy_blue_0005.png \
	cowboy_blue_0006.png \
	cowboy_green_0001.png \
	cowboy_green_0002.png \
	cowboy_green_0003.png \
	cowboy_green_0004.png \
	cowboy_green_0005.png \
	cowboy_green_0006.png \
	cowboy_red_0001.png \
	cowboy_red_0002.png \
	cowboy_red_0003.png \
	cowboy_red_0004.png \
	cowboy_red_0005.png \
	cowboy_red_0006.png \
	cowboy_yellow_0001.png \
	cowboy_yellow_0002.png \
	cowboy_yellow_0003.png \
	cowboy_yellow_0004.png \
	cowboy_yellow_0005.png \
	cowboy_yellow_0006.png \
	muetze_blue_0001.png \
	muetze_blue_0002.png \
	muetze_blue_0003.png \
	muetze_blue_0004.png \
	muetze_blue_0005.png \
	muetze_blue_0006.png \
	muetze_green_0001.png \
	muetze_green_0002.png \
	muetze_green_0003.png \
	muetze_green_0004.png \
	muetze_green_0005.png \
	muetze_green_0006.png \
	muetze_red_0001.png \
	muetze_red_0002.png \
	muetze_red_0003.png \
	muetze_red_0004.png \
	muetze_red_0005.png \
	muetze_red_0006.png \
	muetze_yellow_0001.png \
	muetze_yellow_0002.png \
	muetze_yellow_0003.png \
	muetze_yellow_0004.png \
	muetze_yellow_0005.png \
	muetze_yellow_0006.png \
	erfrischung_0001.png \
	erfrischung_0002.png \
	erfrischung_0003.png \
	erfrischung_0004.png \
	erfrischung_0005.png \
	erfrischung_0006.png \
	erfrischung_0007.png \
	erfrischung_0008.png \
	erfrischung_0009.png \
	erfrischung_0010.png \
	erfrischung_0011.png \
	erfrischung_0012.png \
	erfrischung_0013.png \
	room1.png \
	room2.png \
	room3.png \
	room4.png 

EXTRA_DIST = $(gamefiles_DATA)
